@@ -127,6 +127,7 @@ upgrade PHP if you have not done so prior to upgrading MediaWiki.
 * Allow importing pages as subpage.
 * Add lang and hreflang attributes to language links on Login page.
 * (bug 22749) Create Special:MostInterwikis.
+* Added accountcreate action for API to allow account creation.
 
 === Bug fixes in 1.20 ===
 * (bug 30245) Use the correct way to construct a log page title.
